--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,8 +4,8 @@ public net.minecraft.world.gen.feature.template.Template field_204769_a # blocks
 public net.minecraft.world.GameRules func_223595_a(Ljava/lang/String;Lnet/minecraft/world/GameRules$RuleType;)Lnet/minecraft/world/GameRules$RuleKey; # register
 public net.minecraft.world.GameRules$BooleanValue func_223568_b(Z)Lnet/minecraft/world/GameRules$RuleType; # create
 
-public net.minecraft.world.chunk.ChunkManager field_219272_z # entities
-public net.minecraft.world.chunk.ChunkManager$EntityTracker
-public net.minecraft.world.chunk.ChunkManager$EntityTracker field_219406_f # trackingPlayers
+public net.minecraft.world.server.ChunkManager field_219272_z # entities
+public net.minecraft.world.server.ChunkManager$EntityTracker
+public net.minecraft.world.server.ChunkManager$EntityTracker field_219406_f # trackingPlayers
 
 public net.minecraft.entity.EntitySpawnPlacementRegistry func_209343_a(Lnet/minecraft/entity/EntityType;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$PlacementType;Lnet/minecraft/world/gen/Heightmap$Type;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$IPlacementPredicate;)V # register
