--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -8,7 +8,7 @@ version="${file.jarVersion}"
 displayName="The Midnight"
 displayURL="https://minecraft.curseforge.com/projects/the-midnight"
 updateJSONURL="https://gist.githubusercontent.com/gegy1000/a3f1f593c43f88d7f01a3560ac32e216/raw/midnight_updates.json"
-logoFile="assets/midnight/logo.png"
+logoFile="logo.png"
 credits=""
 authors="cipherzerox, Endergized, Lachney, Gegy, Corail31, Martacus"
 description='''
