Fixed several unmapped functions

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,16 +1,16 @@
-public-f net.minecraft.world.gen.feature.AbstractTreeFeature func_212245_a(Lnet/minecraft/world/IWorld;Lnet/minecraft/world/gen/ChunkGenerator;Ljava/util/Random;Lnet/minecraft/util/math/BlockPos;Lnet/minecraft/world/gen/feature/IFeatureConfig;)Z # place
+public-f net.minecraft.world.gen.feature.AbstractTreeFeature place(Lnet/minecraft/world/IWorld;Lnet/minecraft/world/gen/ChunkGenerator;Ljava/util/Random;Lnet/minecraft/util/math/BlockPos;Lnet/minecraft/world/gen/feature/IFeatureConfig;)Z # place
 public net.minecraft.world.gen.feature.template.Template field_204769_a # blocks
 
 public net.minecraft.world.GameRules$RuleType <init>(Ljava/util/function/Supplier;Ljava/util/function/Function;Ljava/util/function/BiConsumer;)V
-public net.minecraft.world.GameRules$BooleanValue func_223568_b(Z)Lnet/minecraft/world/GameRules$RuleType; # create
+public net.minecraft.world.GameRules$BooleanValue place(Z)Lnet/minecraft/world/GameRules$RuleType; # create
 
-public net.minecraft.world.server.ServerChunkProvider field_217240_d # ticketManager
+public net.minecraft.world.server.ServerChunkProvider ticketManager # ticketManager
 
-public net.minecraft.world.server.ChunkManager field_219272_z # entities
+public net.minecraft.world.server.ChunkManager entities # entities
 public net.minecraft.world.server.ChunkManager$EntityTracker
-public net.minecraft.world.server.ChunkManager$EntityTracker field_219406_f # trackingPlayers
+public net.minecraft.world.server.ChunkManager$EntityTracker trackingPlayers # trackingPlayers
 
-public net.minecraft.world.server.ChunkManager func_223491_f()Ljava/lang/Iterable; # func_223491_f
-public net.minecraft.world.server.ChunkManager func_219243_d(Lnet/minecraft/util/math/ChunkPos;)Z # isOutsideSpawningRadius
+public net.minecraft.world.server.ChunkManager getLoadedChunksIterable()Ljava/lang/Iterable; # func_223491_f
+public net.minecraft.world.server.ChunkManager isOutsideSpawningRadius(Lnet/minecraft/util/math/ChunkPos;)Z # isOutsideSpawningRadius
 
-public net.minecraft.entity.EntitySpawnPlacementRegistry func_209343_a(Lnet/minecraft/entity/EntityType;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$PlacementType;Lnet/minecraft/world/gen/Heightmap$Type;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$IPlacementPredicate;)V # register
+public net.minecraft.entity.EntitySpawnPlacementRegistry register(Lnet/minecraft/entity/EntityType;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$PlacementType;Lnet/minecraft/world/gen/Heightmap$Type;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$IPlacementPredicate;)V # register
