--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -6,7 +6,7 @@ issueTrackerURL="https://github.com/Cryptic-Mushroom/The-Midnight/issues"
 modId="midnight"
 version="${file.jarVersion}"
 displayName="The Midnight"
-displayURL="https://minecraft.curseforge.com/projects/the-midnight"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
 updateJSONURL="https://gist.githubusercontent.com/gegy1000/a3f1f593c43f88d7f01a3560ac32e216/raw/midnight_updates.json"
 logoFile="logo.png"
 credits=""
