--- a/src/main/resources/data/midnight/loot_tables/entities/deceitful_snapper.json
+++ b/src/main/resources/data/midnight/loot_tables/entities/deceitful_snapper.json
@@ -1,7 +1,7 @@
 {
   "pools": [
     {
-      "name": "midnight:stinger",
+      "name": "midnight:deceitful_snapper",
       "rolls": 1,
       "entries": [
         {
