--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,8 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle'
 
-version = "0.4.6"
-group = "com.mushroom"
+version = "0.4.7"
+group = "com.mushroom.midnight"
 archivesBaseName = "themidnight"
 
 sourceCompatibility = targetCompatibility = '1.8'
