Updated credits and authors

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,8 +9,8 @@ displayName="The Midnight"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
 #updateJSONURL=""
 logoFile="logo.png"
-credits=""
-authors="cipherzerox, bagu_chan, RedGalaxySW, Jonathing, Endergized, Lachney, Gegy, Corail31, Martacus"
+credits="Special thanks to all past contributors!"
+authors="Cipher Zero X, RedGalaxySW, Jonathing, bagu_chan, gegy1000, Corail31, Lachney, Five (Paradiscal), Martacus, Cat Core, Endergized, MCVinnyq"
 description='''
 The Midnight adds a brand new dimension to explore full of unique adventures and dangers!
 It's a dimension of perpetual darkness; the only light comes from crystals and the various flora and fauna of the dimension.
