--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
   repositories {
-    maven { url = "http://files.minecraftforge.net/maven" }
+    maven { url = 'https://files.minecraftforge.net/maven' }
     jcenter()
     mavenCentral()
   }
@@ -11,22 +11,22 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle'
 
-version = "0.5.7-3"
-group = "com.mushroom.midnight"
-archivesBaseName = "themidnight"
+version = '0.5.7-3'
+group = 'com.mushroom.midnight'
+archivesBaseName = 'themidnight'
 
-sourceCompatibility = targetCompatibility = '1.8'
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 sourceSets {
   main {
     resources {
-      srcDirs += "src/generated/resources"
+      srcDirs += 'src/generated/resources'
     }
   }
 }
 
 minecraft {
-  mappings channel: 'snapshot', version: '20200326-1.15.1'
+  mappings channel: 'snapshot', version: '20200531-1.15.1'
   accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
   runs {
     client {
@@ -73,10 +73,10 @@ repositories {
 }
 
 dependencies {
-  minecraft 'net.minecraftforge:forge:1.15.2-31.1.18'
-  runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2")
-  compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.2:api")
-  compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.13"
+  minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
+  runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4")
+  compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4:api")
+  compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.14"
 }
 
 jar {
