--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,7 +10,7 @@ public net.minecraft.world.server.ChunkManager field_219272_z # entities
 public net.minecraft.world.server.ChunkManager$EntityTracker
 public net.minecraft.world.server.ChunkManager$EntityTracker field_219406_f # trackingPlayers
 
-public net.minecraft.world.server.ChunkManager func_223491_f()Ljava/lang/Iterable; # func_223491_f
+public net.minecraft.world.server.ChunkManager func_223491_f()Ljava/lang/Iterable; # getLoadedChunksIterable
 public net.minecraft.world.server.ChunkManager func_219243_d(Lnet/minecraft/util/math/ChunkPos;)Z # isOutsideSpawningRadius
 
 public net.minecraft.entity.EntitySpawnPlacementRegistry func_209343_a(Lnet/minecraft/entity/EntityType;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$PlacementType;Lnet/minecraft/world/gen/Heightmap$Type;Lnet/minecraft/entity/EntitySpawnPlacementRegistry$IPlacementPredicate;)V # register
