--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -9,7 +9,7 @@ displayName="The Midnight"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
 #updateJSONURL=""
 logoFile="logo.png"
-credits="Special thanks to all past contributors!"
+credits="Special thanks to all past authors and contributors!"
 authors="Cipher Zero X, RedGalaxySW, Jonathing, bagu_chan, gegy1000, Corail31, Lachney, Five (Paradiscal), Martacus, Cat Core, Endergized, MCVinnyq"
 description='''
 The Midnight adds a brand new dimension to explore full of unique adventures and dangers!
