Set mods.toml to check for mod updates

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="midnight"
 version="${file.jarVersion}"
 displayName="The Midnight"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/the-midnight"
-#updateJSONURL=""
+updateJSONURL="https://raw.githubusercontent.com/Cryptic-Mushroom/The-Midnight/1.15.2/changelog.json"
 logoFile="logo.png"
 #credits="Cipher Zero X, RedGalaxySW, Jonathing, bagu_chan, gegy1000, Corail31, Lachney, Five (Paradiscal), Martacus, Cat Core, Endergized, MCVinnyq"
 authors="Cryptic Mushroom's The Midnight Development Team"
