--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -8,8 +8,8 @@ on:
     branches:
       - 1.15.2
     paths-ignore:
-      - '.github/*'
-      - 'curseforge/*'
+      - '.github/**'
+      - 'curseforge/**'
       - 'README.md'
       - 'LICENSE'
       - 'changelog.json'
