--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@ buildscript {
 
 apply plugin: 'net.minecraftforge.gradle'
 
-version = '0.5.9'
+version = '0.5.10'
 group = 'com.mushroom.midnight'
-archivesBaseName = 'themidnight'
+archivesBaseName = 'midnight'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
@@ -26,11 +26,11 @@ sourceSets {
 }
 
 minecraft {
-  mappings channel: 'snapshot', version: '20200531-1.15.1'
+  mappings channel: 'snapshot', version: '20201011-1.15.1'
   accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
   runs {
     client {
-      workingDirectory project.file('run')
+      workingDirectory project.file('run/client')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
       mods {
@@ -40,9 +40,10 @@ minecraft {
       }
     }
     server {
-      workingDirectory project.file('run')
+      workingDirectory project.file('run/server')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
+      args 'nogui'
       mods {
         midnight {
           sources sourceSets.main
@@ -50,7 +51,7 @@ minecraft {
       }
     }
     data {
-      workingDirectory project.file('run')
+      workingDirectory project.file('run/data')
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
 
@@ -82,12 +83,12 @@ dependencies {
 jar {
   manifest {
     attributes([
-        "Specification-Title"     : "midnight",
-        "Specification-Vendor"    : "cryptic-mushroom",
-        "Specification-Version"   : "1",
+        "Specification-Title"     : "The Midnight",
+        "Specification-Vendor"    : "Cryptic Mushroom",
+        "Specification-Version"   : "${version}",
         "Implementation-Title"    : project.name,
         "Implementation-Version"  : "${version}",
-        "Implementation-Vendor"   : "cryptic-mushroom",
+        "Implementation-Vendor"   : "Cryptic Mushroom",
         "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
     ])
   }
