Notify user if the rewrite is available

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -24,14 +24,17 @@ Lachney - Lead Sound Designer, Lead Musician
 123wdog - Lead Modeler
 
 Former and Inactive Developers
-bagu_chan - Programmer
-gegy1000 - Programmer
-Martacus - Programmer
-arthurbambous - Programmer
-Corail31 - Programmer
-Endergized - Texturer
-Five (Paradiscal) - Texturer
-MCVinnyq - Texturer, Modeler
+gegy1000 - Former Lead Programmer
+Martacus - Former Programmer
+arthurbambous - Former Programmer
+Corail31 - Former Programmer
+Endergized](https://github.com/Endergy) - Former Texturer
+Five (Paradiscal)](https://github.com/fivelol) - Former Texturer
+MCVinnyq - Former Texturer, Former Modeler
+ZombieEnderman5 - Contributor
+veesus mikhel heir - Contributor
+Terenx - Contributor
+KingPhygieBoo - Contributor
 
 We are currently rewriting The Midnight from the ground up and we'd love to hear your feedback on this version so we know what to keep track of when writing the new version! You can join our Discord server from the CurseForge page for more information.
 '''
