--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,18 @@
 buildscript {
   repositories {
     maven { url = 'https://files.minecraftforge.net/maven' }
+    maven { url = 'https://dist.creeper.host/Sponge/maven' }
     jcenter()
     mavenCentral()
   }
   dependencies {
     classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+    classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
   }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'org.spongepowered.mixin'
 
 version = '0.5.10'
 group = 'com.mushroom.midnight'
@@ -25,12 +28,17 @@ sourceSets {
   }
 }
 
+mixin {
+  add sourceSets.main, "midnight.refmap.json"
+}
+
 minecraft {
   mappings channel: 'snapshot', version: '20201011-1.15.1'
   accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
   runs {
     client {
       workingDirectory project.file('run/client')
+      arg "-mixin.config=midnight.mixins.json"
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
       mods {
@@ -41,6 +49,7 @@ minecraft {
     }
     server {
       workingDirectory project.file('run/server')
+      arg "-mixin.config=midnight.mixins.json"
       property 'forge.logging.markers', 'REGISTRIES'
       property 'forge.logging.console.level', 'debug'
       args 'nogui'
@@ -74,7 +83,7 @@ repositories {
 }
 
 dependencies {
-  minecraft 'net.minecraftforge:forge:1.15.2-31.2.0'
+  minecraft 'net.minecraftforge:forge:1.15.2-31.2.45'
   runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4")
   compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4:api")
   compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.14"
@@ -89,7 +98,8 @@ jar {
         "Implementation-Title"    : project.name,
         "Implementation-Version"  : "${version}",
         "Implementation-Vendor"   : "Cryptic Mushroom",
-        "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+        "MixinConfigs": "midnight.mixins.json"
     ])
   }
 }
