--- a/build.gradle
+++ b/build.gradle
@@ -1,105 +1,108 @@
 buildscript {
-  repositories {
-    maven { url = 'https://files.minecraftforge.net/maven' }
-    maven { url = 'https://dist.creeper.host/Sponge/maven' }
-    jcenter()
-    mavenCentral()
-  }
-  dependencies {
-    classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
-    classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
-  }
+    repositories {
+        maven { url = 'https://files.minecraftforge.net/maven' }
+        maven { url = 'https://dist.creeper.host/Sponge/maven' }
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
+    }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
+
+apply plugin: 'eclipse'
 
 version = '0.5.10'
 group = 'com.mushroom.midnight'
 archivesBaseName = 'midnight'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
+println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
 
 sourceSets {
-  main {
-    resources {
-      srcDirs += 'src/generated/resources'
+    main {
+        resources {
+            srcDirs += 'src/generated/resources'
+        }
     }
-  }
 }
 
 mixin {
-  add sourceSets.main, "midnight.refmap.json"
+    add sourceSets.main, "midnight.refmap.json"
 }
 
 minecraft {
-  mappings channel: 'snapshot', version: '20201011-1.15.1'
-  accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-  runs {
-    client {
-      workingDirectory project.file('run/client')
-      arg "-mixin.config=midnight.mixins.json"
-      property 'forge.logging.markers', 'REGISTRIES'
-      property 'forge.logging.console.level', 'debug'
-      mods {
-        midnight {
-          sources sourceSets.main
+    mappings channel: 'snapshot', version: '20201011-1.15.1'
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    runs {
+        client {
+            workingDirectory project.file('run/client')
+            arg "-mixin.config=midnight.mixins.json"
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            mods {
+                midnight {
+                    sources sourceSets.main
+                }
+            }
         }
-      }
-    }
-    server {
-      workingDirectory project.file('run/server')
-      arg "-mixin.config=midnight.mixins.json"
-      property 'forge.logging.markers', 'REGISTRIES'
-      property 'forge.logging.console.level', 'debug'
-      args 'nogui'
-      mods {
-        midnight {
-          sources sourceSets.main
+        server {
+            workingDirectory project.file('run/server')
+            arg "-mixin.config=midnight.mixins.json"
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
+            args 'nogui'
+            mods {
+                midnight {
+                    sources sourceSets.main
+                }
+            }
         }
-      }
-    }
-    data {
-      workingDirectory project.file('run/data')
-      property 'forge.logging.markers', 'REGISTRIES'
-      property 'forge.logging.console.level', 'debug'
+        data {
+            workingDirectory project.file('run/data')
+            property 'forge.logging.markers', 'REGISTRIES'
+            property 'forge.logging.console.level', 'debug'
 
-      args '--mod', 'midnight', '--all', '--output', file('src/generated/resources/')
+            args '--mod', 'midnight', '--all', '--output', file('src/generated/resources/')
 
-      mods {
-        midnight {
-          source sourceSets.main
+            mods {
+                midnight {
+                    source sourceSets.main
+                }
+            }
         }
-      }
     }
-  }
 }
 
 repositories {
-  maven { url = "http://dvs1.progwml6.com/files/maven" }
-  maven {
-    url "https://io.terraforged.com/repository/maven/"
-  }
+    maven { url = "http://dvs1.progwml6.com/files/maven" }
+    maven {
+        url "https://io.terraforged.com/repository/maven/"
+    }
 }
 
 dependencies {
-  minecraft 'net.minecraftforge:forge:1.15.2-31.2.45'
-  runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4")
-  compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4:api")
-  compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.14"
+    minecraft 'net.minecraftforge:forge:1.15.2-31.2.45'
+    runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4")
+    compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4:api")
+    compileOnly "com.terraforged:TerraForgedAPI:1.15.2-0.0.14"
 }
 
 jar {
-  manifest {
-    attributes([
-        "Specification-Title"     : "The Midnight",
-        "Specification-Vendor"    : "Cryptic Mushroom",
-        "Specification-Version"   : "${version}",
-        "Implementation-Title"    : project.name,
-        "Implementation-Version"  : "${version}",
-        "Implementation-Vendor"   : "Cryptic Mushroom",
-        "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-        "MixinConfigs": "midnight.mixins.json"
-    ])
-  }
+    manifest {
+        attributes([
+                "Specification-Title"     : "The Midnight",
+                "Specification-Vendor"    : "Cryptic Mushroom",
+                "Specification-Version"   : "${version}",
+                "Implementation-Title"    : project.name,
+                "Implementation-Version"  : "${version}",
+                "Implementation-Vendor"   : "Cryptic Mushroom",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs"            : "midnight.mixins.json"
+        ])
+    }
 }
