--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.spongepowered.mixin'
 
 apply plugin: 'eclipse'
 
-version = '0.5.10-pre2'
+version = '0.5.10'
 group = 'com.mushroom.midnight'
 archivesBaseName = 'midnight'
 
