--- a/build.gradle
+++ b/build.gradle
@@ -1,113 +1,41 @@
+/*
+ * GradleWorks for ForgeGradle 5
+ * Written by Jonathing
+ * Version 5.0.0-alpha.12
+ *
+ * What was once just an effort to make life easier is now a fully-fledged automated plugin that does all of the work
+ * for you! GradleWorks can be completely configured through the provided YAML files. If you're ever confused on what to
+ * do, stop by the GradleWorks wiki on GitLab or the Jonathing Projects YouTube channel!
+ */
+
+// Buildscript setup (DO NOT EDIT!!!)
 buildscript {
     repositories {
-        maven { url = 'https://maven.minecraftforge.net' }
-        maven { url = 'https://repo.spongepowered.org/maven' }
-        mavenCentral()
+        // Modding Legacy Maven
+        maven { url 'https://maven.moddinglegacy.com/maven' }
+
+        // Minecraft Forge Maven
+        maven { url 'https://maven.minecraftforge.net' }
+
+        // SpongePowered Maven
+        maven { url 'https://repo.spongepowered.org/maven' }
+
+        // ParchmentMC Maven
+        maven { url 'https://maven.parchmentmc.org' }
     }
     dependencies {
+        // GradleWorks
+        classpath group: 'me.jonathing', name: 'gradleworks', version: '5.0.0-alpha.12'
+
+        // Minecraft Forge ForgeGradle
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
-        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7.+'
+
+        // SpongePowered MixinGradle
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7.+', changing: true
+
+        // ParchmentMC Librarian
+        classpath group: 'org.parchmentmc', name: 'librarian', version: '1.+', changing: true
     }
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.mixin'
-
-apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
-
-version = '0.5.11'
-group = 'com.mushroom.midnight'
-archivesBaseName = 'midnight'
-
-java.toolchain.languageVersion = JavaLanguageVersion.of(8) // Mojang ships Java 8 to end users, so your mod should target Java 8.
-println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
-
-sourceSets {
-    main {
-        resources {
-            srcDirs += 'src/generated/resources'
-        }
-    }
-}
-
-mixin {
-    add sourceSets.main, "midnight.refmap.json"
-}
-
-minecraft {
-    mappings channel: 'snapshot', version: '20201011-1.15.1'
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
-    runs {
-        client {
-            workingDirectory project.file('run/client')
-            arg "-mixin.config=midnight.mixins.json"
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            mods {
-                midnight {
-                    sources sourceSets.main
-                }
-            }
-        }
-        server {
-            workingDirectory project.file('run/server')
-            arg "-mixin.config=midnight.mixins.json"
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-            args 'nogui'
-            mods {
-                midnight {
-                    sources sourceSets.main
-                }
-            }
-        }
-        data {
-            workingDirectory project.file('run/data')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
-
-            args '--mod', 'midnight', '--all', '--output', file('src/generated/resources/')
-
-            mods {
-                midnight {
-                    source sourceSets.main
-                }
-            }
-        }
-    }
-}
-
-repositories {
-    maven { url = "https://dvs1.progwml6.com/files/maven" }
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
-}
-
-dependencies {
-    minecraft 'net.minecraftforge:forge:1.15.2-31.2.45'
-    runtimeOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4")
-    compileOnly fg.deobf("mezz.jei:jei-1.15.2:6.0.0.4:api")
-    implementation fg.deobf("curse.maven:terraforged-363820:2953095")
-}
-
-jar {
-    manifest {
-        attributes([
-                "Specification-Title"     : "The Midnight",
-                "Specification-Vendor"    : "Cryptic Mushroom",
-                "Specification-Version"   : "1",
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${version}",
-                "Implementation-Vendor"   : "Cryptic Mushroom",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                "MixinConfigs"            : "midnight.mixins.json"
-        ])
-    }
-}
-
-jar.finalizedBy('reobfJar')
+apply plugin: 'me.jonathing.gradleworks'
